--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="logo">
+      <img src="./img/logo.svg" alt="logo" />
+    </div>
     <script src="./js/pages/home.js" defer></script>
   </body>
 </html>
