--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <div class="logo">
-      <img src="./img/logo.svg" alt="logo" />
-    </div> -->
+    <!-- header start -->
+    <header class="container-fluid main-header">
+      <div class="row">
+        <div class="col-12">
+          <div class="nav-covid">
+            <button class="btn-nav">Announcement</button>
+            <h2 class="nav-p">How we're responding to COVID-19</h2>
+          </div>
+          <div class="logo-main-nav">
+            <img class="logo" src="./img/logo.svg" alt="logo" />
+            <nav class="main-nav">
+              <a href="#">Home</a>
+              <a href="#">About</a>
+              <a href="#">Shop</a>
+              <a href="#">Donate</a>
+              <a href="#">Contact</a>
+              <a href="#">cart button</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <script src="./js/pages/home.js" defer></script>
   </body>
 </html>
