add hero section img

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
         </div>
       </div>
     </header>
-
+    <main>
+      <!-- hero start -->
+      <section class="container bg-main">
+        <div class="row">
+          <div class="col-12">
+            <img src="./img/hero section img.jpg" alt="img" />
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="./js/pages/home.js" defer></script>
   </body>
 </html>
