edit hero but not good

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       <!-- hero start -->
       <section class="container bg-main">
         <div class="row">
-          <div class="col-12">
-            <img src="./img/hero section img.jpg" alt="img" />
+          <div class="col">
+            <div class="hero-img">
+              <img src="./img/hero section img.jpg" alt="img" />
+            </div>
           </div>
         </div>
       </section>
