--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
       </div>
     </header>
     <main>
-      <!-- hero start -->
-      <section class="container bg-main">
-        <div class="row">
-          <div class="col">
-            <div class="hero-img">
-              <img src="./img/hero section img.jpg" alt="img" />
+      <section class="container no-padding">
+        <div class="row no-margin">
+          <div class="col-12 no-margin">
+            <div class="hero">
+              <div class="row hero-tittle-btn">
+                <div class="col-6 col-lg-7">
+                  <h2 class="text-bigger">Serving you since 1989.</h2>
+                  <p class="p-text">Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City.</p>
+                  <button class="btn-nav">Shop Merch</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -48,3 +53,4 @@
     <script src="./js/pages/home.js" defer></script>
   </body>
 </html>
+<!-- <img src="./img/hero section img.jpg" alt="img" /> -->
