--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="row no-margin">
           <div class="col-12 no-margin">
             <div class="hero">
-              <div class="row hero-tittle-btn">
+              <div class="hero-tittle-btn">
                 <div class="col-6 col-lg-7">
                   <h2 class="text-bigger">Serving you since 1989.</h2>
                   <p class="p-text">Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City.</p>
-                  <button class="btn-nav">Shop Merch</button>
+                  <button class="btn-hero">Shop Merch</button>
                 </div>
               </div>
             </div>
