add support class

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
           </div>
         </div>
       </section>
+      <section class="container support">
+        <div class="row">
+          <div class="col-6"></div>
+          <div class="col-6"></div>
+        </div>
+      </section>
     </main>
     <script src="./js/pages/home.js" defer></script>
   </body>
