add support pictures

--- a/index.html
+++ b/index.html
@@ -51,8 +51,58 @@
       </section>
       <section class="container support">
         <div class="row">
-          <div class="col-6"></div>
-          <div class="col-6"></div>
+          <div class="col-6">
+            <div class="support-tittle-p1">
+              <p class="p-text">WAYS TO SUPPORT</p>
+              <p class="text-bigger">Support Acme Outdoors.</p>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="support-tittle-p2">
+              <p class="p-text">COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we’ve listed the best ways to help us through this season.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row card">
+          <div class="col-4">
+            <div class="card-body">
+              <div class="card-bg">
+                <div class="card-number">
+                  <h2 class="text-bigger">01</h2>
+                </div>
+                <div class="card-title">
+                  <p class="text-bigger">SHOP PRODUCTS</p>
+                </div>
+                <img class="circle" src="./img/support pic1.svg" alt="pic1" />
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card">
+              <div class="card-bg">
+                <div class="card-number">
+                  <h2 class="text-bigger">01</h2>
+                </div>
+                <div class="card-title">
+                  <p class="text-bigger">SHOP PRODUCTS</p>
+                </div>
+                <img class="triangle" src="./img/support pic2.svg" alt="pic2" />
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card-body">
+              <div class="card-bg">
+                <div class="card-number">
+                  <h2 class="text-bigger">01</h2>
+                </div>
+                <div class="card-title">
+                  <p class="text-bigger">SHOP PRODUCTS</p>
+                </div>
+                <img class="square" src="./img/support pic3.svg" alt="pic3" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
