add some support text

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="row card">
-          <div class="col-4">
+          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="card-body">
               <div class="card-bg">
                 <div class="card-number">
@@ -75,32 +75,35 @@
                 </div>
                 <img class="circle" src="./img/support pic1.svg" alt="pic1" />
               </div>
+              <p class="p-text">Our full product line is still available online here on our site! Getting outside and hiking is still something you can do. Get your gear now!</p>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="card">
               <div class="card-bg">
                 <div class="card-number">
-                  <h2 class="text-bigger">01</h2>
+                  <h2 class="text-bigger">02</h2>
                 </div>
                 <div class="card-title">
-                  <p class="text-bigger">SHOP PRODUCTS</p>
+                  <p class="text-bigger">DONATE</p>
                 </div>
                 <img class="triangle" src="./img/support pic2.svg" alt="pic2" />
               </div>
+              <p class="p-text">Since we've changed the way we operate to online only, and to ensure your safety, not all our staff is working. Donate to keep them afloat.</p>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
             <div class="card-body">
               <div class="card-bg">
                 <div class="card-number">
-                  <h2 class="text-bigger">01</h2>
+                  <h2 class="text-bigger">03</h2>
                 </div>
                 <div class="card-title">
-                  <p class="text-bigger">SHOP PRODUCTS</p>
+                  <p class="text-bigger">BUY GIFT CARDS</p>
                 </div>
                 <img class="square" src="./img/support pic3.svg" alt="pic3" />
               </div>
+              <p class="p-text">Since we've changed the way we operate to online only, and to ensure your safety, not all our staff is working. Donate to keep them afloat.</p>
             </div>
           </div>
         </div>
