add html css safe section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
           </div>
         </div>
       </section>
+      <section class="container no-padding">
+        <div class="row no-margin">
+          <div class="col-12 no-margin">
+            <div class="safe">
+              <div class="safe-tittle-btn">
+                <!-- <div class="col-12 col-lg-7"> -->
+                <h2 class="text-bigger">How we're keeping you safe during COVID-19</h2>
+                <p class="p-text">As an outdoor shop, we’ve taken precautionary measures to ensure the safety of all our customers and team members.</p>
+                <button class="btn-safe">Read Our Statement</button>
+              </div>
+              <!-- </div> -->
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./js/pages/home.js" defer></script>
   </body>
